--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: main
-
+      - name: Install apktool
+        run: sudo apt-get install -y apktool
+        
       - name: Grant execute permission for script
         run: chmod +x *.sh
 
