--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           if git diff --exit-code chiteroman.json; then
             echo "chiteroman.json is the same, no need to commit."
           else
-            git config --global user.name "daboynb"
+            git config --global user.name "grass2"
             git config --global user.email "username@users.noreply.github.com"
             git add chiteroman.json
             git add osmosis.json
